kubernetes/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: NodePort
  selector:
    app: cart-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
