kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: product.your-app-name.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5000
  - host: cart.your-app-name.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 5001
